Log base 10 where appropriate

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -373,9 +373,9 @@ the diversity of $\bar{\tau}$ respectively, using the result of
 Equation~\ref{eq:individual}. Since lags $\bar{\tau}$ are positive, 
 our assumption for the prior on $\bar{\tau}$ given
 the hyperparameters is a lognormal distribution with median $\mu$ and
-width (standard deviation of $\log(\bar{\tau})$) $\sigma$:
+width (standard deviation of $\log_{10}(\bar{\tau})$) $\sigma$:
 \begin{eqnarray}
-\log(\bar{\tau}) \sim \mathcal{N}(\log(\mu), \sigma^2)
+\log_{10}(\bar{\tau}) \sim \mathcal{N}(\log_{10}(\mu), \sigma^2)
 \end{eqnarray}
 
 The joint posterior distribution for $\mu$ and
