--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -248,7 +248,7 @@ p(y_i | y_{i-1},  \mu, a, \beta) \sim \mathcal{N}
 for $i \geq 2$. This is the discrete AR(1) model from time series theory.
 $\mu$ describes the mean level of the continuum light curve, $\beta$ controls
 the size of the short-term fluctuations, and $a$ controls the correlation
-timescale (the timescale is given by $L = -1/\log(a)$).
+timescale (the timescale is given by $L = -1/\ln(a)$).
 
 For the likelihood (or sampling distribution, really the prior for the data
 given the parameters) we made the conventional gaussian assumption:
