New version of figure, with more samples

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -363,8 +363,8 @@ for three objects, each analysed separately with the single-object model. For
 the first object, there is a moderate ``detection'' of a lag at about 10 days
 (although there is a small second mode above 100 days, which can be understood
 by inspecting the data in Figure~\ref{fig:data}).
-The second object yielded an upper limit, and the third object's lag was
-not well inferred.
+The second object's lag was not well constrained,
+and the third object's data only provided an upper limit on its lag.
 \label{fig:example_posteriors}}
 \end{center}
 \end{figure}
