Slight wording change

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -62,7 +62,7 @@ galaxies:active --- methods: data analysis
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Introduction}
-Reverberation mapping (RM) is an important technique for the study
+Reverberation mapping (RM) is a key technique for the study
 of active galactic nuclei (AGN). The technique is based on the temporal
 fluctuations of the central continuum source, and the subsequent response
 of the broad line region (BLR) emission. The time delay between the continuum
