Mention true values

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -402,7 +402,8 @@ and is typical of the posterior distribution, as it should be.
 \caption{The joint posterior distribution for $\mu$ and $\sigma$, hyperparameters
 describing the distribution of $\bar{\tau}$ values in the sample. The prior
 distribution was uniform over the area shown.
-The true solution is indicated by the white star symbol.\label{fig:posterior}}
+The true solution $(\mu = 0.867, \sigma = 0.157)$
+is indicated by the white star symbol.\label{fig:posterior}}
 \end{center}
 \end{figure}
 
