Slight editing to conclusions

--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -425,8 +425,8 @@ $\log_{10}\left(\bar{\tau}\right)$, is plotted as the solid line.
 \end{figure}
 
 \section{Conclusions}\label{sec:conclusions}
-Reverberation mapping is an important, yet observationally intensive,
-technique in studies of active galaxies. This has motivated substantial
+Reverberation mapping campaigns are observationally intensive, yet potentially
+very informative. This has led to
 research into RM data analysis techniques, as well as less costly observing
 strategies. The recent approach of \citet{2012MNRAS.427.2701F} demonstrated
 that it is possible to combine information from many sparsely-measured AGN
