--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -243,11 +243,11 @@ time using ten time bins per day, and have a discrete continuum light curve
 $\mathbf{y} = \{y_1, ..., y_n\}$, included in the model as a set of unknown
 parameters. The prior for these parameters is:
 \begin{eqnarray}
-p(y_i | y_{i-1},  \mu, a, \beta) \sim \mathcal{N}
-\left(\mu + a\left(y_{i-1} - \mu\right), \beta^2\right)
+p(y_i | y_{i-1},  m, a, \beta) \sim \mathcal{N}
+\left(m + a\left(y_{i-1} - m\right), \beta^2\right)
 \end{eqnarray}
 for $i \geq 2$. This is the discrete AR(1) model from time series theory.
-$\mu$ describes the mean level of the continuum light curve, $\beta$ controls
+$m$ describes the mean level of the continuum light curve, $\beta$ controls
 the size of the short-term fluctuations, and $a$ controls the correlation
 timescale (the timescale is given by $L = -1/\ln(a)$).
 
@@ -264,7 +264,7 @@ We chose a log-uniform prior for $L$ (the AGN variability timescale)
 between $0.1$ and $10^5$ days, a log-uniform
 prior for $\beta$ (the size of the short-term fluctuations)
 between $10^{-3}$ and $10^3$ flux units, a Cauchy(0, 100)
-prior for $\mu$ (the mean flux level of the AGN), a log-uniform prior for $b$
+prior for $m$ (the mean flux level of the AGN), a log-uniform prior for $b$
 (the upper limit of the transfer function) between $10^{-4}$ and $10^2$ days,
 a uniform prior for $a$ (the lower limit of the transfer function)
 between 0 and $b$, a log-uniform prior between
