--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -286,13 +286,21 @@ function, we simulated data from a sample of 100 AGN. We assumed the
 continuum flux for each object fluctuates around a mean value $m = 50$ in
 arbitrary units. The variability timescales $L$ were simulated from a very
 broad log-uniform distribution (i.e. a uniform distribution for $\ln(L)$)
-with a lower limit of 100 days and an upper limit of $10,000$ days. The
+with a lower limit of 10 days and an upper limit of $1,000$ days. The
 variability amplitudes $\beta$ were also simulated from a log-uniform
 distribution with lower limit of 0.2 flux units and an upper limit of 1 flux
 unit. This implies some objects are more variable than others, as is typical
 in reverberation mapping.
 
-
+Each object in the sample had its own transfer function parameters. The upper
+limit $b$ of the transfer function was simulated using a log-normal distribution
+with a median value of 10 days, and the standard deviation of $\ln(b)$ was
+0.3. Given $b$, $a$ was simulated from a uniform distribution between $0$ and
+$a$. The resulting distribution of lags $\bar{\tau} = (a+b)/2$ is very well
+approximated by a lognormal distribution with a median of 7.4 days and width
+(quantified by the standard deviation of $\log_{10}(\bar{\tau})$) of 0.157.
+The response amplitudes $A$ and $C$ were set to 0.5 and 0 respectively, for
+all objects.
 
 The measured data for each of the 100 AGN was
 continuum flux measurements, once per day, for 100 days. The continuum fluxes
@@ -300,9 +308,10 @@ for each object oscillate around a mean value of 50 in arbitrary units, and the
 standard deviation of the measurement noise is 1 (i.e. 2\%). The line data is measured on
 only two days, with times selected from a uniform distribution between $t=50$
 and $t=100$ days (i.e. corresponding to the latter half of the continuum data).
-The flux of the line data is scaled to half that of the line data, and the
-measurement noise for the line data is 0.25, or 1\%. See Figure~\ref{fig:data}
-for three illustrative data sets from the sample.
+The flux of the line data is typically about half that of the continuum data
+(since $A=0.5$ for all objects), and the
+measurement noise for the line data is 0.25, or about 1\%.
+See Figure~\ref{fig:data} for three illustrative data sets from the sample.
 
 \begin{figure}
 \begin{center}
@@ -415,7 +424,8 @@ and is typical of the posterior distribution, as it should be.
 describing the distribution of $\bar{\tau}$ values in the sample. The prior
 distribution was uniform over the area shown.
 The true solution $(\mu = 0.867, \sigma = 0.157)$
-is indicated by the white star symbol.\label{fig:posterior}}
+is indicated by the white star symbol. $\mu = 0.867$ corresponds to a typical
+lag of 7.4 days.\label{fig:posterior}}
 \end{center}
 \end{figure}
 
@@ -435,6 +445,15 @@ $\log_{10}\left(\bar{\tau}\right)$, is plotted as the solid line.
 \label{fig:posterior2}}
 \end{center}
 \end{figure}
+
+Note that our method for combining individual object results into an inference
+about the population (Section~\ref{sec:multiple}) assumes that the hierarchical
+prior applies to only a single parameter (in our case $\bar{\tau}$). If we
+incorporate additional information by using a hierarchical prior for the other
+model parameters, allowing us to detect (for example) that all of the response
+amplitudes $A$ were equal to 0.5, we may be able to make more accurate
+inferences. However, this would increase the complexity of the method and the
+computational expense.
 
 \section{Conclusions}\label{sec:conclusions}
 Reverberation mapping campaigns are observationally intensive, yet potentially
