--- a/Paper/ms.tex
+++ b/Paper/ms.tex
@@ -483,7 +483,8 @@ It is a pleasure to thank Tommaso Treu, Anna Pancoast (UCSB), and
 Brandon Kelly (UCSB) for many
 useful conversations about reverberation mapping. The STAN ({\tt mc-stan.org})
 team provided helpful advice about the use of their software. BJB is partially
-supported by the Marsden Fund (Royal Society of New Zealand).
+supported by the Marsden Fund (Royal Society of New Zealand). We are grateful
+to the referee, Stephen Fine, for his helpful comments.
 
 \begin{thebibliography}{99}
 \bibitem[\protect\citeauthoryear{Barth et al.}{2013}]{2013ApJ...769..128B} 
